Links to my other projects in the README are now provided.

--- a/README
+++ b/README
@@ -182,53 +182,12 @@ will be      known
 and  if      PIE
 will         segfault!
 
-As  a complimentary gift my latest 3 books also are included!
-Wow, yeah, yes, 3 free books!  But they will not be found in a library!
+As a complimentary gift my latest 3 books also were included!
+But now in separate git repositories are hosted.
+https://kyle-sallee.github.io/Freedom_Paydom/
+https://kyle-sallee.github.io/The_Great_Creator_Emulators/
+https://kyle-sallee.github.io/A_DIVERT/
 
-"Delta Paradigm," one of my earlier books was misplaced, sorry.
-
-"Freedom Paydom" "The Great Creator Emulators" and "A DIVERT"
-are the titles.
-
-They       are not religious or  political,     because
-to enslave persons religion  and politics   are inflicted.
-But the    freedom idea from 3   distinct       view points is described.
-
-For  one   book only "A DIVERT" ogg audio files are provided.
-Thus sans  reading   by listen  can             be  enjoyed.
-
-Why I   always  SANS     payment demand totally  FREEly  give      my artwork
-if      curious then the books   explain.
-In  the paydom  although born    my     from     freedom proclivities persisted.
-Afore   where I lived    every   person gives and every  person       receives.
-To  the freedom to   go  if      desired      the books  will help.
-
-On Earth   manifest     destiny if completed
-on Earth   the          freedom no longer exists.
-Frankly    from    what was seen,  disappointment was solicited.
-
-But        playing with computers  on   Earth     was fun, thanks.
-To all who played       cordially  with me                 thanks.
-
-As    stupid or unstable or if any person again about me carelessly asserts
-afore foolishly posturing oneself, think first.
-I accomplished Sorcerer, sdelta 3, xlaunch 2, many other programs,
-ascript, 4 books,  an unreleased Pellucid POSIX,
-without any money,
-without any grants,
-without a   computer science degree.
-Sans enslavement infliction
-sans enslavement compliance
-on   Earth     I became a total success.
-Why? To what   I accorded importance  I  succeeded in     doing and making!
-How unstable and stupid does that seem?  More like 99.98% excellence!
-
-To  all my   detractors, Ha Ha I win!
-In  this     life I will not remain  a slave
-in  next     life I will not be      enslaved.
-The paydom   atrocity    inflicting, confining, cheating, lying, murdering,
-retributing, sadistic,   thieving,   minds      suck.
-I   really   had         to  live it to believe it!  Incredibly irrational!  Ha!
-I   will     not be      returning.
-
-In 5 to 10 years if not again publishing I have departed.  Bye bye.  :)
+I also wanted to include "Delta Paradigm"
+a book I wrote more than 20 years ago.
+But I misplaced it.  Sorry.
