Perhaps an older version for ascript\ ko.3 was comitted? I added a note to explain why it was moved to .../argot.optional/broke/ The argot/Makefile change fixes argot sort linking. The linker was complaining about multiple definitions, which in the past worked. Now an addtional linker command line parameter is required.
The ascript/Makefile change moves the -ldl from afore to aft
the source file names which solves the linker problem.
Already documented in the previous commit,
but not included, a gcc bug is surmised.
I am a bit rusty with git having barely used git in about a year.

--- a/argot.optional/broke/kernel-object/man/ascript ko.3
+++ b/argot.optional/broke/kernel-object/man/ascript ko.3
@@ -8,6 +8,19 @@ ascript ko
 .EX
 By Kyle Sallee in 2018 copyrighted.
 
+.SH NOTES
+.EX
+With older than gcc version 10 when compiled the argot ko works.
+With            gcc version 10 when compiled the argot ko segfaults.
+An investigation and fix was not attempted.
+
+Rather the argot ko map was authored.
+komap's source and manual pare is under dir kernel-object-map.
+
+The argot ko map is faster and uses less RAM than argot ko,
+and can do everything argot ko can do except
+the two often useless flags during module loading.
+
 .SH HOSTED VAR
 .EX
 .TS
